kustomize/base/02-tradezero-pricer-db-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tradezero-pricer-db
  labels:
    app: tradezero-pricer-db
spec:
  selector:
    matchLabels:
      app: tradezero-pricer-db
  template:
    metadata:
      labels:
        app: tradezero-pricer-db
        app.kubernetes.io/name: tradezero-pricer-db
        app.kubernetes.io/version: "0.1.3"
        app.kubernetes.io/component: tradezero-pricer-db
        app.kubernetes.io/part-of: tradezero
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: mongo
        image: docker.io/library/mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-vol
          mountPath: /data/db
      volumes:
      - name: mongodb-vol
        persistentVolumeClaim:
          claimName:
            pricer-db-pvc
        resources:
          requests:
            cpu: 200m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 128Mi
        #readinessProbe:
        #  initialDelaySeconds: 20
        #  exec:
        #    command: ["/bin/healthcheck"]
        #livenessProbe:
        #  initialDelaySeconds: 20
        #  periodSeconds: 10
        #  exec:
        #    command: ["/bin/healthcheck"]
