kustomize/base/04-tradezero-pricer-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tradezero-pricer
  labels:
    app: tradezero-pricer
spec:
  selector:
    matchLabels:
      app: tradezero-pricer
  template:
    metadata:
      labels:
        app: tradezero-pricer
        app.kubernetes.io/name: tradezero-pricer
        app.kubernetes.io/version: "0.1.3"
        app.kubernetes.io/component: tradezero-pricer
        app.kubernetes.io/part-of: tradezero-pricer
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: pricer
        image: quay.io/uar_openshift/tradezero-pricer:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 200m
            memory: 250Mi
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 500Mi
        #readinessProbe:
        #  initialDelaySeconds: 20
        #  exec:
        #    command: ["/bin/healthcheck"]
        #livenessProbe:
        #  initialDelaySeconds: 20
        #  periodSeconds: 10
        #  exec:
        #    command: ["/bin/healthcheck"]
