kustomize/base/03-tradezero-pricer-db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tradezero-pricer-db
  labels:
    app: tradezero-pricer-db
    app.kubernetes.io/name: tradezero-pricer-db
    app.kubernetes.io/version: "0.1"
    app.kubernetes.io/component: tradezero-pricer-db
    app.kubernetes.io/part-of: tradezero
spec:
  type: ClusterIP
  selector:
    app: tradezero-pricer-db
  ports:
  - name: mongodb
    port: 27017
    targetPort: 27017
