kustomize/base/05-tradezero-pricer-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tradezero-pricer
  labels:
    app: tradezero-pricer
    app.kubernetes.io/name: tradezero-pricer
    app.kubernetes.io/version: "0.1"
    app.kubernetes.io/component: tradezero-pricer
    app.kubernetes.io/part-of: tradezero
spec:
  type: ClusterIP
  selector:
    app: tradezero-pricer
  ports:
  - name: pricer
    port: 8080
    targetPort: 8080
